--- a/backend/FinanceTrackerAPI/appsettings.json
+++ b/backend/FinanceTrackerAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=PersonalFinanceTracker.db"
+  },
+  "DatabaseProvider": "SQLite",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
