:sparkles: add authentication.

--- a/backend/FinanceTrackerAPI/appsettings.json
+++ b/backend/FinanceTrackerAPI/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "PersonalFinanceTracker.Key.JWT",
+    "Issuer": "PersonalFinanceTracker.API",
+    "Audience": "PersonalFinanceTracker.Client"
+  }
 }
