✨ add role based authorisation

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -280,4 +280,6 @@ obj/
 /node_modules
 /wwwroot/node_modules
 
-# End of https://www.toptal.com/developers/gitignore/api/dotnetcore,aspnetcore
+#SQLite
+*.db-shm
+*.db-wal
