✨ add role based authorization

--- a/backend/FinanceTrackerAPI/appsettings.json
+++ b/backend/FinanceTrackerAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "PersonalFinanceTracker.Key.JWT",
+    "Key": "PersonalFinanceTracker.Key.JWT.e739ac60-ce37-4b49-b2d8-f05a28b95d2e",
     "Issuer": "PersonalFinanceTracker.API",
     "Audience": "PersonalFinanceTracker.Client"
   }
