--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "framer-motion": "^11.3.31",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18"
@@ -29,9 +33,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.9.0",
-    "postcss": "^8",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "typescript-eslint": "^8.2.0"
   }
