--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
